beanfactory v2